2011-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* type1.c [FABS, CEIL, FLOOR]: Use routines from libm, the
	evaluation order of tmpx in the original macros is undefined
	by the C-standard!
	(ComputeStem): Fix `ambiguous else' bug (also present in t1lib
	5.1.2, compare libXfont 1.3.x from XOrg-7.4).

2011-07-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* type1.c (PSFakePop): Non-void function should return a value.
	Reported by Jack Howarth <howarth@bromo.med.uc.edu>
	Patch from Akira, [tex-live] Sun, 17 Jul 2011 22:39:30.

	* Makefile.am (AM_CFLAGS): Prepare for compiler warnings.

2011-05-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* README: Fixed a typo.

2011-05-26  Karl Berry  <karl@tug.org>

	* README: clarify license per authors.

2011-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t1funcs.c (Type1OpenScalable): Cast ev[i] to 'unsigned char *'
	to avoid 'differ in signedness' warning.

2011-03-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ps2pk.c (main): `program_invocation_name' has been renamed
	into `kpse_invocation_name'.

2010-03-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ps2pk.c: Use kpse_set_program_name() instead of
	kpse_set_progname().

2010-02-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: List all used header files.

2010-02-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* basics.c: #include "basics.h" and drop all others.

2010-02-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t1info.c (ComputeStdProps): Declare rc as int, not LONG,
	because they differ for WIN32.
	* t1stub.c: Use ANSI C protos (not only for WIN32).
	Declare struct segment (#include "paths.h" doesn't work).

2010-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* basics.c: Don't #include <win32lib.h> for MinGW32.
	ps2pk.c (CheckFSFormat), t1funcs.c (fill): Rename function
	param byte => Byte to avoid conflicts.

2009-07-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* regions.c (NewEdge): align to sizeof(long), as in t1lib.