@@ -32,7 +32,7 @@
 
 int main (int argc, char *argv[])
 {  unsigned int t, l, i;
- unsigned int l1, l2, l3, l4; 
+   unsigned int l1, l2, l3, l4; 
    short c, done, verbose = 0;
    FILE *pfb, *pfa;
    char *pfbname, *pfaname = NULL, *myname = "pfb2pfa";
@@ -71,13 +71,9 @@ int main (int argc, char *argv[])
       if (verbose) printf("Type: %d, ", t);
       switch (t) {
       case 1:
-#if 1
-	l1 = getc(pfb); l2 = getc(pfb); l3 = getc(pfb); l4 = getc(pfb); 
-	l = l1 | l2 << 8 | l3 << 16 | l4 << 24;
-	/* printf("%2x %2x %2x %2x -> %x\n", l1, l2, l3, l4, l); */
-#else
-	l = (getc(pfb)) | (getc(pfb)<<8) | (getc(pfb)<<16) | (getc(pfb)<<24);
-#endif
+         l1 = getc(pfb); l2 = getc(pfb); l3 = getc(pfb); l4 = getc(pfb); 
+         l = l1 | l2 << 8 | l3 << 16 | l4 << 24;
+         /* printf("%2x %2x %2x %2x -> %x\n", l1, l2, l3, l4, l); */
          if (verbose) printf(" plain text, length %d\n", l);
 	 for (i=0; i < l ; i++) {
             c = getc(pfb);
@@ -86,13 +82,9 @@ int main (int argc, char *argv[])
 	  }
          break;
       case 2:
-#if 1
-	l1 = getc(pfb); l2 = getc(pfb); l3 = getc(pfb); l4 = getc(pfb); 
-	l = l1 | l2 << 8 | l3 << 16 | l4 << 24;
-	/* printf("%2x %2x %2x %2x -> %x\n", l1, l2, l3, l4, l); */
-#else
-	l = (getc(pfb)) | (getc(pfb)<<8) | (getc(pfb)<<16) | (getc(pfb)<<24);
-#endif
+         l1 = getc(pfb); l2 = getc(pfb); l3 = getc(pfb); l4 = getc(pfb); 
+         l = l1 | l2 << 8 | l3 << 16 | l4 << 24;
+         /* printf("%2x %2x %2x %2x -> %x\n", l1, l2, l3, l4, l); */
          if (verbose) printf(" binary data, length %d\n", l);
          for(i = 0; i < l ;i++) {
 	    fprintf(pfa, "%02x", getc(pfb));
